new_tests/semantics/type/bad/086_ARRAYLITERAL_3.cm
/*
    Type Error 458

    1| def arr:Array[Int] = Array[5](1,2,3,4,5,6,7,8,9)
    An array of size 5 was initialized with 9 values.
*/

def arr:Array[Int] = Array[5](1,2,3,4,5,6,7,8,9)
